# StringReplace

./: .gitignore  CMakeLists.txt  README.en.md  README.md  StringReplace.sln  cmds.txt
clang/: CMakeLists.txt
data/: dict.txt  extract.sh  merge.bat  video_title_test.txt
projects/vc2015/StringReplace/: StringReplace.vcxproj  StringReplace.vcxproj.filters
src/benchmark/: AcTrie_utf8.h  AcTrie_v1.h  AcTrie_v2.h  AhoCorasick.h  AhoCorasick_utf8.h  AhoCorasick_v1.h  AhoCorasick_v2.h  DAT_utf8.h  Darts.h  Darts_utf8.h  ac_benchmark.h  benchmark.cpp  benchmark.h  darts.h  darts_benchmark.h  darts_utf8.h  strstr_benchmark.h  utf8_utils.h  win_iconv.h
tools/: benchmark.sh  ramdisk.sh
